# motif-wasm

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
examples/bindings/: xmbind  xmbind.alias
examples/periodic/: XmdPeriodic.ad  index.html  main.ts  periodic.c  periodic.uid
examples/twm-periodic/: XmdPeriodic.ad  index.html  main.ts
examples/widget-gallery/: gallery.c  index.html  main.ts
native/: config.h  motif_xlib_stubs.c  uil_x11_stubs.c
native/include/X11/Xft/: Xft.h
scripts/: _build_wml.sh  add_debug_mrmwread.py  add_validation_debug.py  build.sh  dump_idb.py  fetch-motif.sh  find_const_wasm.py  fix_debug_vars.py  fix_mrmwread.py  parse_uid.py  patch_callback_debug.py  patch_validation_debug.py  strip-git.sh  trace_appmain.py
test/: widget-gallery-focus.mjs
